Sat Dec 17 16:28:17 UTC 2011  Martin Corino  <mcorino@remedy.nl>

        * tao/Time_Policy_Manager.cpp:

          Fix for valgrind memory leak reports.

Sat Dec 17 14:05:24 UTC 2011  Martin Corino  <mcorino@remedy.nl>

        * tests/Time_Policy_Custom/Custom_Time_Policy.mpc:

          Fix for windows compile problem.

Fri Dec 16 18:25:19 UTC 2011  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be_include/be_visitor_typecode/typecode_defn.h:

          Change type of 'index_' member to unsigned long, to eliminate
          signed/unsigned comparison warning.

Fri Dec 16 18:22:39 UTC 2011  Martin Corino  <mcorino@remedy.nl>

        * tao/Time_Policy_Manager.cpp:

          Changed to fix wchar compile problems.

Thu Dec 15 20:46:52 UTC 2011  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_visitor_exception/cdr_op_cs.cpp:
        * TAO_IDL/be/be_visitor_valuetype/marshal_cs.cpp:
        * TAO_IDL/be/be_visitor_valuetype/valuetype.cpp:
        * TAO_IDL/be/be_visitor_structure/cdr_op_cs.cpp:
        * TAO_IDL/be/be_interface.cpp:
        * TAO_IDL/be/be_sequence.cpp:

          Addressed the rest of the Coverity-reported issues for the
          IDL compiler.

Thu Dec 15 18:03:34 UTC 2011  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_valuetype.cpp:
        * TAO_IDL/be/be_type.cpp:
        * TAO_IDL/be/be_visitor_xplicit_pre_proc.cpp:
        * TAO_IDL/be/be_identifier_helper.cpp:
        * TAO_IDL/util/utl_labellist.cpp:
        * TAO_IDL/util/utl_string.cpp:
        * TAO_IDL/util/utl_scope.cpp:
        * TAO_IDL/ast/ast_template_module.cpp:
        * TAO_IDL/ast/ast_visitor_reifying.cpp:
        * TAO_IDL/ast/ast_enum.cpp:

          Addressed Coverity-reported issues.

Thu Dec 15 16:49:51 UTC 2011  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_visitor_operation/operation_cs.cpp:
        * TAO_IDL/be/be_visitor_operation/operation.cpp:
        * TAO_IDL/be/be_visitor_ami_pre_proc.cpp: